employee-api-app/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: employee-api
  labels:
    name: employee-api
    environment: production
    managed-by: terraform
